assets/styles/main.scss
/* ... */
.navbar-right {
	clear: right;
	margin-right: 0;
}

.navbar-collapse {
	max-height: none;
}

.navbar-toggle {
	padding: 4px 4px 2px;
	@include transition(all 0.2s);

	&:hover,
	&:active,
	&:focus {
		color: $nav-highlight;
		@include transition(all 0.2s);

		.icon-bar {
			background-color: $nav-highlight;
			@include transition(all 0.2s);
		}

		.icon-menu {
			color: $nav-highlight;
			@include transition(all 0.2s);
		}
	}

	.icon-bar {
		background-color: $grey-medium;
		width: 30px;
		height: 3px;
		@include transition(all 0.2s);

		+.icon-bar {
			margin-top: 5px;
		}
	}

	.icon-menu {
		display: block;
		margin-top: 3px;
		color: $grey-medium;
		font-size: 10px;
		font-weight: 700;
		font-family: sans-serif;
		text-align: center;
		text-transform: uppercase;
		@include transition(all 0.2s);
	}

	@media (min-width: $screen-sm-min) {
		margin: 36px 20px;
	}
}


@media (min-width: $screen-sm-min) {
	.navbar-shrink {
		box-shadow: $box-shadow-blur-3;
		padding: 16px 0 12px;
		@include transition(all 0.2s);

		.navbar-brand {
			font-size: 24px;
			padding-top: 0;
		}

		.navbar-nav {
			padding-top: 6px;
		}

		*[class^='social-links'] {
			display: none;
		}
	}
}

.navbar-fixed-top {
	top: 0px;
}

@media (min-width: $screen-sm-min) {
	body.admin-bar {
		.navbar-fixed-top {
			top: 32px !important;
		}
	}

	@media (max-width: 782px) {
		body.admin-bar {
			.navbar-fixed-top {
				top: 46px !important;
			}
		}
	}
}



/* ==========================================================================
   Design Paradigms
   ========================================================================== */

/** Forms **/

form,
.form-group {
	label {
		font-family: $font-bernino;
		font-weight: 600;
		font-size: 16px;
	}
}

input,
textarea,
.form-control,
.btn {
	color: $grey-medium;
	border: $border-grey-2px;

	&:focus {
		border-color: $accent-color;
	}
}

input[type="text"],
input[type="email"],
input[type="search"],
input[type="password"],
textarea {
  -webkit-appearance: none;
  	 -moz-appearance: none;
          appearance: none;
}

.form-control {
	padding-left: 8px;
	padding-right: 8px;
}

/** Links & Buttons **/


.btn {
	font-family: $font-bernino;
	font-weight: 400;
	font-size: 16px;
	@include transition(all 0.2s);

	&:hover,
	&:active,
	&:focus {
		color: $white;
		border-color: $accent-color;
		background-color: $accent-color;
	}
}

.btn-primary,
.subscribe-form .button {
	color: darken($accent-color, 10%);
	background-color: $white;
	border-color: $accent-color;

	&:hover,
	&:active,
	&:focus {
		color: $white;
		background-color: $accent-color;
		border-color: $accent-color;
	}
}

.btn-inline {
	display: inline-block;
	padding: 3px 4px 2px;
	line-height: 1;
}

.input-group-btn:last-child>.btn,
.input-group-btn:last-child>.btn-group,
.input-group-btn>.btn+.btn {
	margin-left: -2px;
}

.search-form {
	.btn {
		font-size: 14px;
	}

	.input-group-btn .btn {
		padding-top: 5px;
		padding-bottom: 5px;
	}
}

.more-button {
	display: block;
	text-align: right;

	a {
		display: inline-block;
	  padding: 3px 4px 2px;
	  font-size: 12px;
	  line-height: 1.2;
	  font-family: $font-bernino;
	  // border: 1px solid $grey;
	  border: $border-grey-2px;
	  border-radius: 3px;
	  color: $grey-medium;
	  @include transition(all 0.2s);

		&:hover,
		&:active,
		&:focus {
			color: $white;
			background-color: $accent-color;
			border-color: $accent-color;
			text-decoration: none;
		}

		@media (min-width: $screen-sm-min) {
			font-size: 13px;
			bottom: 16px;
		}
	}
}

.read-more-link {
	@extend .more-button;

	margin-top: 7px;
}

.view-all {
	@extend .more-button;

	position: absolute;
  right: 0;
  bottom: 15px;
}

/** Links **/

.heading-link {
	color: $grey-medium;
	text-decoration: none;

	&:hover,
	&:active,
	&:focus {
		text-decoration: none;
	}
}

.plain-link {
	text-decoration: none;

	&:hover,
	&:active,
	&:focus {
		text-decoration: none;
	}
}



/** Post Snippets **/

.snippet {
	.entry-title {
		text-align: center;
		margin: 0 auto;
	}

	.entry-title.over {
		color: $white;
		max-height: 50px;
		text-shadow: $text-shadow-1;
		text-overflow: ellipsis;
		-webkit-font-smoothing: subpixel-antialiased
	}

	.entry-title.below {
		font-size: 16px;
		margin-bottom: 15px;
		color: $grey-darker;
		text-decoration: none;

		&:hover,
		&:active,
		&:focus {
			text-decoration: none;
		}
	}

	.entry-meta-container {
		.post-type {
			display: none;
		}
	}

	.entry-summary {
		@include prose-body;
		@include hyphenate;

		margin-top: 15px;
		margin-bottom: 50px;
		font-size: 17px;
		text-align: justify;

		@media (min-width: $screen-sm-min) {
			margin-bottom: 30px;
		}

		p {
			font-size: 17px;
		}
	}

	.snippet-thumbnail {
		@include background-image;
		background-color: #c9c9c9;
		width: 100%;
		margin-bottom: 15px;
		max-height: 240px;
		padding: 12.5%;
		border-radius: 2px;
		overflow: hidden;
		text-overflow: ellipsis;
		@include transition(all 0.2s);

		&:hover,
		&:active,
		&:focus {
			opacity: 0.8;
			filter: alpha(opacity=80);
		}

		@media (min-width: $screen-sm-min) {
			padding: 15%;
		}
	}
}



/** Entry Template **/

.entry-title {
	a {
	@extend .heading-link;
	}
}


/** Down Arrow **/

.down-arrow {
	font-size: 42px;
	width: 30px;
	position: absolute;
	bottom: 0px;
	left: 50%;
	margin-left: -15px;
	color: $grey-darker;
	text-align: center;
	text-decoration: none;

	&:hover,
	&:active,
	&:focus {
		color: $grey;
		text-decoration: none;
	}
}


/** Pagination **/

.serif,
.sans-serif {
	ul.pagination {
		@include prose-heading;
		font-weight: 400;
		font-size: 17px;
	}
}

.pagination {
	display: table;
	margin: 10px auto;

	li {
		a {
			margin-right: 7px;
			padding: 4px 9px;
			border-radius: 4px;
			border: 1px solid transparent;
		}
	}
}
/* ... */

